# yeschef

./: AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  tmux.conf
.claude/skills/terminal-recording/: SKILL.md
.github/workflows/: ci.yml
docs/: herdr-flow-verification.md  herdr-investigation.md  tmux-backend-demo-setup.sh  tmux-backend-demo.tape  tui-demo-setup.sh  tui-demo.tape  tui-v2-demo.tape
docs/spikes/: tui-replacement.md
docs/spikes/poc/: tui-native.sh  tui-native.tape  tui-native.tmux.conf
prds/: 001-mvp.md
src/: cli.rs  config.rs  guard.rs  image.rs  main.rs  names.rs  store.rs
src/backend/: mock.rs  mod.rs  real.rs
src/commands/: cleanup.rs  init.rs  mod.rs  orchestrate.rs  project.rs  tui.rs
tests/: e2e.rs
