[package]
name = "nixsand"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "5"
tempfile = "3"
ratatui = "0.29"

[[bin]]
name = "nixsand"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
